--- a/opdrachtw3.html
+++ b/opdrachtw3.html
@@ -6,7 +6,7 @@
 
 	<title>opdracht wie ben ik! week 3</title>
 
-	<link rel="stylesheet" type="text/css" href="opdracht w3.css">
+	<link rel="stylesheet" type="text/css" href="opdrachtw3.css">
 
 </head>
 
@@ -14,7 +14,7 @@
 
 	<h1>wie ben ik!</h1>
 
-	<img src="foto-jonathan.jpg">
+	<img alt="" src="foto-jonathan.jpg">
 
 	<p>
 
